First draft of the RNAAS note

--- a/doc/taktent.tex
+++ b/doc/taktent.tex
@@ -34,22 +34,22 @@
 %% Note that RNAAS manuscripts DO NOT have abstracts.
 %% See the online documentation for the full list of available subject
 %% keywords and the rules for their use.
-\keywords{+++}
+\keywords{general: extraterrestrial intelligence, methods: numerical, statistical}
 
 %% Start the main body of the article. If no sections in the 
 %% research note leave the \section call blank to make the title.
 
 \section{Motivation}
 
-The Search for Extraterrestrial Intelligence (SETI) in our Galaxy is fraught with challenges, even if the Milky Way is replete with technosignatures.  Civilisations choosing to send electromagnetic transmissions must make a series of choices - frequency, bandwidth, direction, beam solid angle, polarisation, etc.  They must also choose whether to send continuous transmissions or pulses.  If pulses are sent, the duration of the pulse, and the time interval between pulses must also be selected.  Finally, if transmissions are to contain information, the transmission must be modulated in some fashion - the choices available for signal modulation are numerous (see e.g. \citealt{Messerschmitt2013,Messerschmitt2015}).  
+The Search for Extraterrestrial Intelligence (SETI) in our Galaxy is fraught with challenges, even if the Milky Way is replete with technosignatures.  For example, civilisations choosing to send an electromagnetic transmission must make a series of choices that will affect our ability to observe them - frequency, bandwidth, direction, beam solid angle, polarisation, etc.  They must also choose whether to send continuous transmissions or pulses.  If pulses are sent, the duration of the pulse, and the time interval between pulses must also be selected.  Finally, if transmissions are to contain information, the transmission must be modulated in some fashion - the choices available for signal modulation are numerous (see e.g. \citealt{Messerschmitt2013,Messerschmitt2015}).  
 
-These choices require SETI searches to explore a parameter space of very high volume and dimensionality - often referred to as ``the cosmic haystack'' \citep{TarterPlanetsLife2007,Wright2018a}.  The size of this haystack motivates the Messaging Extraterrestrial Intelligence (METI) community, who argue that the only means to collapse the haystack to a manageable size is for humans to send transmissions of their own, allowing potential alien interlocutors a better chance of constructing an appropriate signal for us to receive (see e.g. +++, +++ and +++).
+These choices require SETI searches to explore a parameter space of very high volume and dimensionality - often referred to as ``the cosmic haystack'' \citep{TarterPlanetsLife2007,Wright2018a}.  The size of this haystack motivates the Messaging Extraterrestrial Intelligence (METI) community, who argue that the only means to collapse the haystack to a manageable size is for humans to send transmissions of their own, allowing potential alien interlocutors a better chance of constructing an appropriate signal for us to receive (see e.g. \citealt{Lemarchand1994, Vakoch2011, DeMagalhaes2016}).  If METI is to be forbidden, as a substantial fraction of the astronomical community wishes, then we must resort to strategies that make use of so-called Schelling points - strategy combinations that both observer and transmitter consider natural or obvious \citep[see e.g.][]{Wright2017b}.
 
-SETI surveys are enjoying a revival thanks to private funding efforts such as the Breakthrough Listen initiative \citep{Isaacson2017}.  The astrophysics community's attitude towards SETI science continues to warm, as evidenced by the recent NASA Technosignatures workshop (and accompanying report, \citealt{Participants2018}).   With this new goodwill towards SETI, and the continuing advances in breadth and depth of SETI searches (+++), it is important to motivate underlying observational strategy, and to demonstrate the fraction of the cosmic haystack to which a given search is sensitive.  
+SETI surveys are enjoying a revival thanks to private funding efforts such as the Breakthrough Listen initiative \citep{Isaacson2017}.  The astrophysics community's attitude towards SETI science continues to warm, as evidenced by the recent NASA Technosignatures workshop (and accompanying report, \citealt{Participants2018}).   With this new goodwill towards SETI, and the continuing advances in breadth and depth of SETI searches (e.g. \citealt{Rampadarath2012,Harp2016,Enriquez2017}), it is important to motivate underlying observational strategy, and to demonstrate the fraction of the cosmic haystack to which a given search is sensitive.  
 
-Equally, as new forms of technosignature are characterised and modelled, opportunities grow for all-sky astronomical surveys to yield serendipitous detections.  As these surveys are not explicitly designed to capture technosignatures, there is a clear need for tools to characterise their potential yield.  For example, exoplanet transit surveys have the potential to recover several kinds of surface and atmospheric technosignatures \citep[e.g.][]{Lin2014,Korpela2015,Lingam2017a}, as well as signatures of orbital developments and installations \citep[e.g.][]{Socas-Navarro2018}.
+Equally, as new forms of technosignature are characterised and modelled, opportunities grow for all-sky astronomical surveys to yield serendipitous detections.  As these surveys are not explicitly designed to capture technosignatures, there is a clear need for tools to characterise their potential yield.  For example, exoplanet transit surveys have the potential to recover several kinds of surface and atmospheric technosignatures \citep[e.g.][]{Lin2014,Korpela2015,Lingam2017a}, as well as signatures of orbital developments and installations \citep[e.g.][]{Socas-Navarro2018}, but detailed constraints on the detectability of such signatures, given an observing strategy optimised for other objectives, are yet to be developed.
 
-In this Note, I introduce a new Python package, \textsc{taktent}(+++)\footnote{The name ``taktent'' is derived from the Scots phrase ``tak tent o' the sma things'', which translates into English as ``pay attention to the little things''.}, to the SETI community.  It allows the user to set up and run agent-based simulations of civilisations engaging in either SETI (observing) or METI (broadcasting).  I will briefly describe the package, and give an example of its use.  The source code is available at \url{github.com/dh4gan/taktent}, and can be installed using the \texttt{pip} package installer (see the github repository for further details).
+In this Note, I introduce a new Python package, \textsc{taktent}\footnote{The name ``taktent'' is derived from the Scots phrase ``tak tent o' the sma things'', which translates into English as ``pay attention to the little things''.}, to the SETI community \citep{taktentDOI}.  It allows the user to set up and run agent-based simulations of civilisations engaging in either SETI (observing) or METI (broadcasting).  I will briefly describe the package, and give an example of its use.  The source code is available at \url{github.com/dh4gan/taktent}, and can be installed using the \texttt{pip} package installer (see the github repository for further details).
 
 \section{About the Package}
 
@@ -61,7 +61,7 @@ The direction of both classes' pointing is governed by a \texttt{Strategy} objec
 
 The simulation itself is driven by the \texttt{Population} class, which allows the generation of \texttt{Transmitters} and \texttt{Observers}, and conducts observations, recording and plotting detection data where requested.  For several examples of \textsc{taktent} in operation, please see \url{github.com/dh4gan/taktent/examples}.
 
-\textsc{taktent} models the finite travel time of electromagnetic signals, and their inverse square law ($1/r^2$) decay of flux, as well as the Doppler drift due to the relative motion of the Observer and Transmitter.  It should also be noted that the package's construction is flexible enough that if the user wishes to model SETI signals using a different messenger particle or mechanism, this is also achievable.  For example, one can model gravitational waves (which have a $1/r$ flux decay law) by adjusting the Transmitter object's \texttt{decaylaw} parameter, or with slower messenger particles by reducing the \texttt{broadcastspeed} parameter.
+\textsc{taktent} models the finite travel time of electromagnetic signals, and their inverse square law ($1/r^2$) decay of flux, as well as the Doppler drift due to the relative motion of the \texttt{Observer} and \texttt{Transmitter}.  It should also be noted that the package's construction is flexible enough that if the user wishes to model SETI signals using a different messenger particle or mechanism, this is also achievable.  For example, one can model gravitational waves (which have a $1/r$ flux decay law) by adjusting the Transmitter object's \texttt{decaylaw} parameter, or with slower messenger particles by reducing the \texttt{broadcastspeed} parameter.
 
 \section{A Science Example}
 
